# zeclip

./: CLAUDE.md  README.md
.claude/: settings.local.json
.github/workflows/: release.yml
public/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  formatter.rs  main.rs  parser.rs
